--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "20"
       - run: npm install
-      - run: NUXT_APP_BASE_URL=/onix-codelist/ npx nuxt build --preset github_pages
+      - run: NUXT_APP_BASE_URL="/onix-codelist/" NUXT_APP_CDN_URL="https://ghostmonkeyfps.github.io/onix-codelist/" npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
