--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-vue-next": "^0.445.0",
     "nuxt": "^3.13.0",
     "radix-vue": "^1.9.6",
+    "sitemap": "^8.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
