--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.5.1",
+    "@vueuse/core": "^13.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "lucide-vue-next": "^0.445.0",
     "nuxt": "^3.13.0",
     "radix-vue": "^1.9.6",
